Minor: add note to bottom of page

--- a/VoxCharta_01-web_scraping.ipynb
+++ b/VoxCharta_01-web_scraping.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:79a6c1e743688291d3f75515eb0e5af7af209a634f0a943b78921b7987f110cf"
+  "signature": "sha256:e0d1356012e9e141c38eacb0273ff8e6d016ff465734a3b0fccf0534861d2e61"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -835,6 +835,14 @@
       }
      ],
      "prompt_number": 131
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Insights:\n",
+      "My voting frequency is irregular.  Notably there were big patches of time when I did not vote.  Lately I have been voting a lot.  "
+     ]
     },
     {
      "cell_type": "code",
